# tescrust

./: Cargo.toml  LICENSE  README.md  Tescrust.drawio  rustfmt.toml  test.txt
src/: main.rs
src/tescrust/core/: crud.rs  data.rs
src/tescrust/io/: crud.rs  data.rs  guard.rs
src/tescrust/tui/: nav.rs  view.rs
src/tescrust/tui/component/: bar_graph.rs  base.rs  layout.rs  scroll.rs  table.rs
src/tescrust/tui/workspaces/: def_wspace.rs
src/tescrust/util/: crust.rs
